     * Added marksmanship to the Drake Glider branch
     * Hurrican and Sky Drakes now have same defense and movement costs on fungus and
       in caves like other drakes.
 * music & sound
   * new or improved sounds: holy magic, thorns, pincers
 * miscellaneous
   * added a generic scenario music macro and table of contents to utils.cfg
 * graphics
   * new attack animations: Curse, Drake Claws, Human Crossbow, Human Throwing Dagger,
     Ink, Orcish Bow, Orcish Crossbow, Orcish Spear, Slam, Tentacle, Thunderstick,
     Undead Dagger, Waterspray, Web

Version 1.1.4:
 * language and i18n:
   * updated translations: Czech, German, Slovak
 * help menu
   * It is now possible to specify generated topic sorting by title separate
     from sorting all of the topics. This allows a sorted list of generated
     topics to be placed after a fixed list of topics.
   * The Abilities and Traits sections were changed so that the overviews come
     first
   * Fixed a bug where the wrong ability description could be extracted from
     a unit type with multiple abilities. This was causing an incorrect
     description for Illuminate in Help.
   * Units are now sorted first by race and then by name.
 * WML engine
   * modify ranged animation timing, all animations (attack, defend, missile
   * leading_image is deprecated please use the new [leading_anim] animation
   block
   have the same clock)
 * multiplayer maps:
   * revised multiplayer maps: Charge
 * units
   * fixed a problem with unit type description being overwritten by the unit
     description (name) when saving and reloading.
   * tweaked the movement type of Nagas and Ghosts

Version 1.1.3:
 * campaigns
   * Two Brothers
     * made the 2nd scenario easier on easy: more starting gold, 4 extra
       villages, +10 income, less villages for the ai
     * added a hero icon for the dark adept
     * improved dialogs in the 2nd scenario
     * added a move_unit_fake to have Brenda not appear out of nowhere (easy