@@ -44,6 +44,13 @@ type=boolean
 default=yes
 [/advanced_preference]
 
+[advanced_preference]
+field=mouse_scrolling
+name=_"Mouse Scrolling"
+type=boolean
+default=yes
+[/advanced_preference]
+
 [game_config]
     base_income=2
     village_income=1
