@@ -199,6 +199,7 @@ namespace preferences {
 	void set_chat_lines(int lines);
 
 	bool compress_saves();
+	bool mouse_scroll_disabled();
 
 	std::set<std::string> &encountered_units();
 	std::set<std::string> &encountered_terrains();
