@@ -31,6 +31,7 @@ Version 1.1.4+svn:
    * new or improved sounds: holy magic, thorns, pincers
  * miscellaneous
    * added a generic scenario music macro and table of contents to utils.cfg
+   * added an advanced preference to disable mouse scrolling
  * graphics
    * new attack animations: Curse, Drake Claws, Human Crossbow, Human Throwing Dagger,
      Ink, Orcish Bow, Orcish Crossbow, Orcish Spear, Slam, Tentacle, Thunderstick,
